# collist

./: .hgignore  README.rst  collist.py  next.py  pyproject.toml  setup.py
next/: __init__.py  __main__.py  sliceview.py
