[tool.poetry]
name = "collist"
version = "0.1.0"
description = "columnate data"
authors = ["Aaron Christianson <ninjaaron@gmail.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.5"
compose-struct = "^0.7.5"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
cols = "collist:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
